BL2: Replace mbedcrypto with tf-psa-crypto library
- The TF-PSA-Crypto library relies on a single configuration file
  (instead of two) to determine which mechanisms are enabled through
  the PSA Cryptography API. Update BL2's configuration file to the
  new format,
- Update the source and include paths in CMake,
- Use single crypto accelerator config file,
- Conditionally include psa_stub_rng.c in the bl2_crypto target
  instead of being a separate library - also makes the linking step
  simpler.

Change-Id: I06804a09ab29ad0454c5ae59af2cc3de658f5203
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -25,8 +25,7 @@ add_library(bl2_crypto_config INTERFACE)
 
 target_compile_definitions(bl2_crypto_config
     INTERFACE
-        MBEDTLS_CONFIG_FILE="${MCUBOOT_MBEDCRYPTO_CONFIG_FILEPATH}"
-        MBEDTLS_PSA_CRYPTO_CONFIG_FILE="${MCUBOOT_PSA_CRYPTO_CONFIG_FILEPATH}"
+        TF_PSA_CRYPTO_CONFIG_FILE="${MCUBOOT_PSA_CRYPTO_CONFIG_FILEPATH}"
         # The config files have conditional includes based on these four definitions
         $<${is_rsa_signature}:MCUBOOT_SIGN_RSA>
         $<${is_rsa_signature}:MCUBOOT_SIGN_RSA_LEN=${SIG_LEN}>
@@ -39,15 +38,18 @@ target_compile_definitions(bl2_crypto_config
 target_include_directories(bl2_crypto_config
     INTERFACE
         ${CMAKE_SOURCE_DIR}/interface/include
+        # Workaround: needed for private headers in drivers/builtin/include/mbedtls/private
+        # which are included by some of the TF-PSA-Crypto interface headers.
+        ${TF_PSA_CRYPTO_PATH}/drivers/builtin/include
 )
 
 # Check if the p256m driver is enabled in the config file, as that will require
-# to build some 3rd party specific source code in addition to Mbed TLS source.
+# to build some 3rd party specific source code in addition to TF-PSA-Crypto source.
 # Note that 0 means SUCCESS here, 1 means FAILURE
 set(MBEDTLS_P256M_NOT_FOUND 1)
 execute_process(COMMAND
     ${Python3_EXECUTABLE}
-    ${MBEDCRYPTO_PATH}/scripts/config.py -f "${MCUBOOT_MBEDCRYPTO_CONFIG_FILEPATH}" get MBEDTLS_PSA_P256M_DRIVER_ENABLED
+    ${TF_PSA_CRYPTO_PATH}/scripts/config.py -f "${MCUBOOT_PSA_CRYPTO_CONFIG_FILEPATH}" get MBEDTLS_PSA_P256M_DRIVER_ENABLED
     RESULT_VARIABLE MBEDTLS_P256M_NOT_FOUND)
 
 # If the enablement is conditional, the script would still mark it as found
@@ -59,23 +61,6 @@ endif()
 
 ############################### BL2_CRYPTO #####################################
 
-# Adds a static library target named 'bl2_fallback_rng' which includes the source file
-# 'src/psa_stub_rng.c'. This source file contains only the __weak stub implementation,
-# serving as a fallback for random number generation in case no other RNG is provided.
-if(NOT CRYPTO_HW_ACCELERATOR)
-    add_library(bl2_fallback_rng STATIC
-        src/psa_stub_rng.c
-    )
-    target_link_libraries(bl2_fallback_rng
-        PUBLIC
-            bl2_crypto_config
-    )
-    target_compile_options(bl2_fallback_rng
-        PRIVATE
-            ${BL2_COMPILER_CP_FLAG}
-    )
-endif()
-
 set(is_384_bit_curve "$<STREQUAL:${SIG_LEN},384>")
 set(is_256_bit_curve "$<STREQUAL:${SIG_LEN},256>")
 set(build_sha_384    "$<AND:${is_ec_signature},${is_384_bit_curve}>")
@@ -84,35 +69,37 @@ set(build_p256m      "$<IF:$<BOOL:${MBEDTLS_P256M_ENABLED}>,$<AND:${is_ec_signat
 
 list(APPEND BL2_CRYPTO_SRC
     $<$<OR:$<BOOL:${MCUBOOT_USE_PSA_CRYPTO}>,$<BOOL:${MCUBOOT_USE_MBED_TLS}>>:${CMAKE_SOURCE_DIR}/lib/ext/thin-psa-crypto-core/thin_psa_crypto_core.c>
-    ${MBEDCRYPTO_PATH}/library/platform.c
-    ${MBEDCRYPTO_PATH}/library/platform_util.c
-    ${MBEDCRYPTO_PATH}/library/memory_buffer_alloc.c
-    ${MBEDCRYPTO_PATH}/library/psa_crypto_hash.c
-    $<${build_sha_256}:${MBEDCRYPTO_PATH}/library/sha256.c>
-    $<${build_sha_384}:${MBEDCRYPTO_PATH}/library/sha512.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/psa_crypto_ecp.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/psa_util.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/ecp.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/ecp_curves.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/ecdsa.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/bignum.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/bignum_core.c>
-    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${MBEDCRYPTO_PATH}/library/constant_time.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/psa_crypto_rsa.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/psa_util.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/rsa.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/rsa_alt_helpers.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/bignum.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/bignum_core.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/constant_time.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/asn1parse.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/asn1write.c>
-    $<${is_rsa_signature}:${MBEDCRYPTO_PATH}/library/md.c>
-    $<$<AND:${is_ec_signature},${build_p256m}>:${MBEDCRYPTO_PATH}/3rdparty/p256-m/p256-m_driver_entrypoints.c>
-    $<$<AND:${is_ec_signature},${build_p256m}>:${MBEDCRYPTO_PATH}/3rdparty/p256-m/p256-m/p256-m.c>
-    ${MBEDCRYPTO_PATH}/library/aes.c
-    $<$<BOOL:${MCUBOOT_ENCRYPT_KW}>:${MBEDCRYPTO_PATH}/library/nist_kw.c>
-    $<$<BOOL:${MCUBOOT_ENCRYPT_KW}>:${MBEDCRYPTO_PATH}/library/constant_time.c>
+    ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/aes.c
+    ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/platform.c
+    ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/platform_util.c
+    ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/memory_buffer_alloc.c
+    ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/psa_crypto_hash.c
+    $<${build_sha_256}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/sha256.c>
+    $<${build_sha_384}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/sha512.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/psa_crypto_ecp.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/psa_util.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/ecp.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/ecp_curves.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/ecdsa.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/bignum.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/bignum_core.c>
+    $<$<AND:${is_ec_signature},$<NOT:${build_p256m}>>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/constant_time.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/psa_crypto_rsa.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/psa_util.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/rsa.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/rsa_alt_helpers.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/bignum.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/bignum_core.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/constant_time.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/asn1parse.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/asn1write.c>
+    $<${is_rsa_signature}:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/md.c>
+    $<$<AND:${is_ec_signature},${build_p256m}>:${TF_PSA_CRYPTO_PATH}/drivers/p256-m/p256-m_driver_entrypoints.c>
+    $<$<AND:${is_ec_signature},${build_p256m}>:${TF_PSA_CRYPTO_PATH}/drivers/p256-m/p256-m/p256-m.c>
+    $<$<BOOL:${MCUBOOT_ENCRYPT_KW}>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/nist_kw.c>
+    $<$<BOOL:${MCUBOOT_ENCRYPT_KW}>:${TF_PSA_CRYPTO_PATH}/drivers/builtin/src/constant_time.c>
+    # Include __weak stub implementation, serving as a fallback for random number generation in case no other RNG is provided.
+    $<$<NOT:$<BOOL:${CRYPTO_HW_ACCELERATOR}>>:src/psa_stub_rng.c>
 )
 
 add_library(bl2_crypto STATIC ${BL2_CRYPTO_SRC})
@@ -125,7 +112,10 @@ target_compile_definitions(bl2_crypto
 
 target_include_directories(bl2_crypto
     PUBLIC
-        ${MBEDCRYPTO_PATH}/library
+        ${TF_PSA_CRYPTO_PATH}/core
+        ${TF_PSA_CRYPTO_PATH}/include
+        ${TF_PSA_CRYPTO_PATH}/drivers/builtin/include
+        ${TF_PSA_CRYPTO_PATH}/drivers/builtin/src
         ${CMAKE_CURRENT_SOURCE_DIR}/ext/mcuboot/include
 )
 
@@ -192,7 +182,6 @@ target_link_libraries(bl2
         $<$<BOOL:${TEST_BL2}>:mcuboot_tests>
     PUBLIC
         bl2_crypto
-        $<$<NOT:$<BOOL:${CRYPTO_HW_ACCELERATOR}>>:bl2_fallback_rng>
 )
 
 target_compile_options(bl2
@@ -239,10 +228,10 @@ target_include_directories(bl2_hal
 if (TFM_CODE_SHARING)
     target_share_symbols(bl2 ${CMAKE_CURRENT_SOURCE_DIR}/bl2_shared_symbols.txt)
 
-    if (NOT EXISTS ${MBEDCRYPTO_PATH}/library/code_share.c)
-        message(FATAL_ERROR "File ${MBEDCRYPTO_PATH}/library/code_share.c does not exist.
-        Have the patch ${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/0002-Enable-crypto-code-sharing-between-independent-binar.patch
-        been applied to the mbedcrypto repo at ${MBEDCRYPTO_PATH}?
-        Hint: The command might be `cd ${MBEDCRYPTO_PATH} && git apply ${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/*.patch`")
+    if (NOT EXISTS ${TF_PSA_CRYPTO_PATH}/drivers/code_share.c)
+        message(FATAL_ERROR "File ${TF_PSA_CRYPTO_PATH}/drivers/code_share.c does not exist.
+        Have the patch ${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/0002-Enable-crypto-code-sharing-between-independent-binar.patch
+        been applied to the tf-psa-crypto repo at ${TF_PSA_CRYPTO_PATH}?
+        Hint: The command might be `cd ${TF_PSA_CRYPTO_PATH} && git apply ${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/*.patch`")
     endif()
 endif()
