Crypto: Update crypto accelerator configurations
- BL1: Do not include the crypto accelerator configuration directly from
  the common base configuration file, but include it only from the
  extra configuration file provided by the given target,
- Also combine and update the crypto accelerator configuration files of
  BL2 and the Crypto service (aligned to TF-PSA-Crypto) similarly to
  how the Crypto config profiles were updated in the commit with change
  ID: I4ded87d287ac1b84e6936da50a3b740ecc2b844f. Update the Crypto
  profile config files to include the new combined configuration
  (TF_PSA_CRYPTO_ACCELERATOR_CONFIG_FILE).

Change-Id: I901c00974dfe2e0e330758be3d24b21535f1afb9
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/platform/ext/accelerator/adi/CMakeLists.txt
+++ b/platform/ext/accelerator/adi/CMakeLists.txt
@@ -1,5 +1,6 @@
 #-------------------------------------------------------------------------------
 # Copyright (C) 2025 Analog Devices, Inc. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -8,10 +9,9 @@
 include(${PLATFORM_DIR}/ext/target/${TFM_PLATFORM}/accelerator/CMakeLists.txt)
 if(BL2)
     target_compile_definitions(bl2_crypto_config
-    INTERFACE
-        MBEDTLS_ACCELERATOR_CONFIG_FILE="${PLATFORM_DIR}/ext/target/${TFM_PLATFORM}/accelerator/include/mbedtls_accelerator_config.h"
-        MBEDTLS_ACCELERATOR_PSA_CRYPTO_CONFIG_FILE="${PLATFORM_DIR}/ext/target/${TFM_PLATFORM}/accelerator/include/crypto_accelerator_config.h"
-)
+        INTERFACE
+            TF_PSA_CRYPTO_ACCELERATOR_CONFIG_FILE="${PLATFORM_DIR}/ext/target/${TFM_PLATFORM}/accelerator/include/tf_psa_crypto_accelerator_config.h"
+    )
 endif()
 
 if (TFM_PARTITION_CRYPTO)
