RSE: split OTP config into module and script
Refactor `otp_config.py` into a reusable module (`otp_config.py`) and
script (`create_otp_config.py`).

All argument parsing helpers and friends have been moved to
`create_otp_config.py` and caller have been updated to import it from
there.

`otp_config.py`'s dependency on `arg_util.py` has been removed. We use
`isinstance` instead of `==` in `from_config_file` and `to_config_file`
as the latter only checks for an exact type match and rejects subclasses.

`create_otp_config.py` entry point has been added to `pyproject.toml`
and CMakeLists.txt has been updated to use installed script instead of
absolute path to script source.

Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>
Change-Id: Ie00832d064def86e835adff525c824c0e8b480d3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ rse_derive_provisioning_master_key = "rse_scripts.derive_provisioning_master_key
 rse_create_non_endorsed_provisioning_plain_data_message = "rse_scripts.create_non_endorsed_provisioning_plain_data_message:main"
 rse_create_plain_data_handler_provisioning_bundle = "rse_scripts.create_plain_data_handler_provisioning_bundle:main"
 rse_create_routing_tables_source_file = "rse_scripts.create_routing_tables_source_file:main"
+rse_create_otp_config = "rse_scripts.create_otp_config:main"
 
 [tool.setuptools]
 packages = ["tfm_tools", "bl2", "bl1", "rse", "rse_scripts"]
