SPM: Fix typo in Kconfig for ARM_V81M+TFM_PXN_ENABLE
Replace ARCH_ARM_V81MM with ARCH_ARM_V81M for TFM_PXN_ENABLE.
This allows the TFM_PXN_ENABLE option to be picked up correctly
by Kconfig.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: I8c9743fa9fdbd62ce6f1fa0f40e7b83d257a51fe

--- a/secure_fw/spm/Kconfig
+++ b/secure_fw/spm/Kconfig
@@ -88,7 +88,7 @@ config CONFIG_TFM_HALT_ON_CORE_PANIC
 
 config TFM_PXN_ENABLE
     bool "PXN"
-    depends on ARCH_ARM_V81MM
+    depends on ARCH_ARM_V81M
     default n
     help
       Privileged eXecute-Never.
