Build: Remove redundant CMake targets
- Remove `tfm_spm_defs` since `tfm_spm` can fulfills the same role.
- Remove `tfm_arch` as useless

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Ifd37fff77b16dc87584035f7d69ba42481b3cd12

--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -41,12 +41,12 @@ target_sources(tfm_sprt
 target_link_libraries(tfm_sprt
     PUBLIC
         psa_interface
-        tfm_spm_defs
         tfm_config
         platform_s
         tfm_log_unpriv_headers
-    PRIVATE
+        tfm_boot_status
         tfm_spm
+    PRIVATE
         psa_crypto_config
         tfm_vprintf
         tfm_log_unpriv
