--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -20,9 +20,7 @@ if(PSA_FRAMEWORK_HAS_MM_IOVEC)
 endif()
 
 add_library(tfm_spm STATIC)
-add_library(tfm_spm_defs INTERFACE)
 add_library(tfm_boot_status INTERFACE)
-add_library(tfm_arch INTERFACE)
 
 add_dependencies(tfm_spm manifest_tool)
 
@@ -35,11 +33,14 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/tfm_version.h.in
 
 target_include_directories(tfm_spm
     PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/core
+        .
+        include
+        core
+        core/arch
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/boot>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/interface>
     PRIVATE
-        ${CMAKE_SOURCE_DIR}
         ${CMAKE_SOURCE_DIR}/secure_fw/include
         ${CMAKE_SOURCE_DIR}/secure_fw/partitions/lib/runtime
         ${CMAKE_BINARY_DIR}/generated
@@ -85,23 +86,9 @@ target_sources(tfm_spm
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:${CMAKE_BINARY_DIR}/generated/interface/src/ns_mailbox_client_id.c>
 )
 
-target_include_directories(tfm_spm_defs
-    INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/core
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/boot>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/interface>
-        ${CMAKE_CURRENT_SOURCE_DIR}/core/arch
-)
-
 target_link_libraries(tfm_spm
-    PUBLIC
-        tfm_arch
-        tfm_spm_defs
     PRIVATE
         platform_s
-        tfm_boot_status
-        tfm_config
         tfm_partitions
         tfm_sprt
 )
@@ -143,13 +130,6 @@ set_source_files_properties(tfm_secure_api.c
 target_compile_definitions(tfm_config
     INTERFACE
         $<$<OR:$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>,$<BOOL:${CONFIG_TFM_CONNECTION_BASED_SERVICE_API}>>:CONFIG_TFM_CONNECTION_POOL_ENABLE>
-)
-
-############################ TFM arch ##########################################
-
-target_include_directories(tfm_arch
-    INTERFACE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/core/arch>
 )
 
 ############################ Boot Status #######################################
