Build: Simplify t_cose CMake build script
- Merge two files into one and remove `t_cose_defs` and `t_cose_common`
  CMake targets.
- Bump tf-m-extras version

Change-Id: Ifa3ff344af05190607e1c3d3badeb02db114a1bb
Signed-off-by: Anton Komlev <anton.komlev@arm.com>

--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -30,17 +30,56 @@ fetch_remote_library(
         SOURCE_SUBDIR       non-exist-dir
 )
 
-include(tfm_t_cose.cmake)
-
 ############################ t_cose secure #####################################
 
-add_library(tfm_t_cose_s STATIC EXCLUDE_FROM_ALL)
+add_library(tfm_t_cose_s STATIC EXCLUDE_FROM_ALL
+    ${T_COSE_PATH}/crypto_adapters/t_cose_psa_crypto.c
+    ${T_COSE_PATH}/src/t_cose_key.c
+    ${T_COSE_PATH}/src/t_cose_parameters.c
+    ${T_COSE_PATH}/src/t_cose_util.c
+)
+
+if(${SYMMETRIC_INITIAL_ATTESTATION})
+target_sources(tfm_t_cose_s
+    PRIVATE
+        ${T_COSE_PATH}/src/t_cose_mac_compute.c
+        ${T_COSE_PATH}/src/t_cose_mac_validate.c
+)
+else()
+target_sources(tfm_t_cose_s
+    PRIVATE
+        ${T_COSE_PATH}/src/t_cose_sign_sign.c
+        ${T_COSE_PATH}/src/t_cose_sign1_sign.c
+        ${T_COSE_PATH}/src/t_cose_signature_sign_main.c
+        ${T_COSE_PATH}/src/t_cose_sign_verify.c
+        ${T_COSE_PATH}/src/t_cose_sign1_verify.c
+        ${T_COSE_PATH}/src/t_cose_signature_verify_main.c
+)
+endif()
+
+target_include_directories(tfm_t_cose_s
+    PUBLIC
+        $<BUILD_INTERFACE:${T_COSE_PATH}/inc>
+        $<BUILD_INTERFACE:${T_COSE_PATH}/src>
+)
+
+target_compile_definitions(tfm_t_cose_s
+    PUBLIC
+        T_COSE_USE_PSA_CRYPTO
+        T_COSE_DISABLE_CONTENT_TYPE
+        T_COSE_DISABLE_COSE_SIGN
+        T_COSE_DISABLE_KEYWRAP
+        T_COSE_DISABLE_PS256
+        T_COSE_DISABLE_PS384
+        T_COSE_DISABLE_PS512
+        T_COSE_DISABLE_SHORT_CIRCUIT_SIGN
+        $<$<OR:$<NOT:$<STREQUAL:${ATTEST_KEY_BITS},384>>,$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES384>
+        $<$<OR:$<NOT:$<STREQUAL:${ATTEST_KEY_BITS},521>>,$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_ES512>
+)
 
 target_link_libraries(tfm_t_cose_s
-    PUBLIC
-        tfm_t_cose_defs
     PRIVATE
-        tfm_t_cose_common
+        psa_crypto_config
         psa_interface
         qcbor
         platform_s
