--- a/bl1/bl1_2/CMakeLists.txt
+++ b/bl1/bl1_2/CMakeLists.txt
@@ -163,7 +163,7 @@ add_custom_command(OUTPUT bl2_signed.bin
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/config/bl2_image_config.pickle
     DEPENDS $<$<BOOL:${TFM_GENERATE_BL1_2_CM_SIGNING_KEY}>:bl1_generated_cm_signing_key>
     DEPENDS $<$<AND:$<EQUAL:${TFM_BL1_2_SIGNER_AMOUNT},2>,$<BOOL:${TFM_GENERATE_BL1_2_DM_SIGNING_KEY}>>:bl1_generated_dm_signing_key>
-    DEPENDS bl2_bin
+    DEPENDS ${bin_dir}/bl2.bin bl2_bin
     COMMAND ${CMAKE_COMMAND} -E env PYTHONPATH=${CMAKE_SOURCE_DIR}/tools/modules
             ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/scripts/create_bl2_img.py
                     --bl2_image_config ${CMAKE_CURRENT_BINARY_DIR}/config/bl2_image_config.pickle
