cmake: Make common api_ns export relocatable
Use relative paths in install DESTINATION as it is relative to
CMAKE_INSTALL_PREFIX and results in relocatable exported targets.
Generated files are now installed via a dedicated install step instead
of being written directly to the install directory. This also works
for subsequent installs.

Mbed crypto config files PROJECT_CONFIG_HEADER_FILE and
TARGET_CONFIG_HEADER_FILE appeared with absolute paths in the
psa_crypto_config target and pointed to the config files in the source
tree. Now they are installed and use paths relative to the install dir
in spe_export.cmake.

MCUBOOT_KEY_ENC pointed to the key in source tree, it is handled
the same way as the signing keys now, meaning that variables point to
the installed keys with relative paths which is translated using the
PATH_VARS param of configure_package_config_file(). The NS encryption
key is handled the same way.

TFM_S_HEX_FILE_PATH is kept configurable and is installed even if it is
not inside the ${CMAKE_BINARY_DIR}/bin. Specified the install path for
NS build.

Signed-off-by: Gergely Kovacs <Gergely.Kovacs2@arm.com>
Change-Id: Id4123feae28f339340fe421833f708d6777fcb3e

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -17,8 +17,8 @@ set(is_v8.xm    "$<OR:${is_v8.1m},${is_v8.0m}>")
 add_library(psa_crypto_config INTERFACE)
 target_compile_definitions(psa_crypto_config
     INTERFACE
-        MBEDTLS_PSA_CRYPTO_CONFIG_FILE="${TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH}"
-        MBEDTLS_CONFIG_FILE="${TFM_MBEDCRYPTO_CONFIG_CLIENT_PATH}"
+        $<BUILD_INTERFACE:MBEDTLS_PSA_CRYPTO_CONFIG_FILE="${TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH}">
+        $<BUILD_INTERFACE:MBEDTLS_CONFIG_FILE="${TFM_MBEDCRYPTO_CONFIG_CLIENT_PATH}">
 )
 # The following is required for tfm_plat_crypto_nv_seed.h
 target_include_directories(psa_crypto_config
