--- a/config/spe_config.cmake.in
+++ b/config/spe_config.cmake.in
@@ -8,6 +8,8 @@
 # This CMake script template contains the set of options settled on secure side
 # build but necessary for building the non-secure side too.
 
+@PACKAGE_INIT@
+
 # TF-M Profile
 set(TFM_PROFILE                            @TFM_PROFILE@    CACHE STRING "The TF-M profile")
 
@@ -29,8 +31,8 @@ set(TFM_NS_KEY_ID                          @TFM_NS_KEY_ID@)
 set(MCUBOOT_CONFIRM_IMAGE                  @MCUBOOT_CONFIRM_IMAGE@)
 set(MCUBOOT_ENC_IMAGES                     @MCUBOOT_ENC_IMAGES@)
 set(MCUBOOT_ENC_KEY_LEN                    @MCUBOOT_ENC_KEY_LEN@)
-set(MCUBOOT_KEY_ENC                        @MCUBOOT_KEY_ENC@)
-set(MCUBOOT_KEY_ENC_NS                     @MCUBOOT_KEY_ENC_NS@)
+set_and_check(MCUBOOT_KEY_ENC_NS           @PACKAGE_MCUBOOT_INSTALL_KEY_ENC_NS@)
+set_and_check(MCUBOOT_KEY_ENC              @PACKAGE_MCUBOOT_INSTALL_KEY_ENC@)
 set(MCUBOOT_MEASURED_BOOT                  @MCUBOOT_MEASURED_BOOT@)
 set(MCUBOOT_ALIGN_VAL                      @MCUBOOT_ALIGN_VAL@)
 set(MCUBOOT_UPGRADE_STRATEGY               @MCUBOOT_UPGRADE_STRATEGY@)
@@ -43,11 +45,11 @@ set(MCUBOOT_IMAGE_MULTI_SIG_SUPPORT        @MCUBOOT_IMAGE_MULTI_SIG_SUPPORT@)
 
 set(MCUBOOT_SECURITY_COUNTER_S             @MCUBOOT_SECURITY_COUNTER_S@)
 set(MCUBOOT_IMAGE_VERSION_S                @MCUBOOT_IMAGE_VERSION_S@)
-set(MCUBOOT_KEY_S                          @MCUBOOT_INSTALL_KEY_S@)
+set_and_check(MCUBOOT_KEY_S                @PACKAGE_MCUBOOT_INSTALL_KEY_S@)
 
 set(MCUBOOT_SECURITY_COUNTER_NS            @MCUBOOT_SECURITY_COUNTER_NS@)
 set(MCUBOOT_IMAGE_VERSION_NS               @MCUBOOT_IMAGE_VERSION_NS@)
-set(MCUBOOT_KEY_NS                         @MCUBOOT_INSTALL_KEY_NS@)
+set_and_check(MCUBOOT_KEY_NS               @PACKAGE_MCUBOOT_INSTALL_KEY_NS@)
 set(PLATFORM_DEFAULT_IMAGE_SIGNING         @PLATFORM_DEFAULT_IMAGE_SIGNING@)
 
 set(TFM_LOAD_NS_IMAGE                      @TFM_LOAD_NS_IMAGE@              CACHE BOOL   "Whether to load an NS image")
@@ -88,5 +90,5 @@ set(TFM_NS_MANAGE_NSID                     @TFM_NS_MANAGE_NSID@)
 set(RECOMMENDED_TFM_TESTS_VERSION          @TFM_TESTS_VERSION@)
 set(CHECK_TFM_TESTS_VERSION                @TFM_TESTS_REVISION_CHECKS@)
 
-set(TFM_MERGE_HEX_FILES                    @TFM_MERGE_HEX_FILES@        CACHE BOOL   "Create merged hex file in the end of the build")
-set(TFM_S_HEX_FILE_PATH                    @TFM_S_HEX_FILE_PATH@        CACHE STRING "Merged secure hex file's path")
+set(TFM_MERGE_HEX_FILES                    @TFM_MERGE_HEX_FILES@                 CACHE BOOL   "Create merged hex file in the end of the build")
+set_and_check(TFM_S_HEX_FILE_PATH          @PACKAGE_TFM_S_HEX_FILE_INSTALL_PATH@ CACHE STRING "Merged secure hex file's path")
