platform:Add PHDRs to gcc linkerscript
Added missing PHDR entries so that all TF-M partition data and BSS
sections are covered by loadable segments. This fixes objcopy warnings
about sections that couldn’t be allocated in any segment.

.noinit and .cy_sharedmem were not explicitly placed in the linker
script, causing them to be assigned to a loadable PT_LOAD segment.
This change explicitly includes these sections in the .TFM_BSS block
as (NOLOAD) so they are correctly treated as uninitialized RAM.

This resolves build errors for uninitialized data sections and
ensures that .noinit and .cy_sharedmem are allocated in RAM
without consuming Flash image space.

Change-Id: I7665005a4289fdf0d3a24354806fcff4ada2647e
Signed-off-by: Gabor Toth <gabor.toth2@arm.com>

--- a/platform/ext/common/atfe/tfm_isolation_s.ld.template
+++ b/platform/ext/common/atfe/tfm_isolation_s.ld.template
@@ -677,6 +677,10 @@ SECTIONS
         __service_runtime_end__ = .;
         *(SORT_BY_ALIGNMENT(.bss*))
         *(COMMON)
+
+        *(SORT_BY_ALIGNMENT(.noinit*))       /* Uninitialized RAM */
+        *(SORT_BY_ALIGNMENT(.cy_sharedmem*)) /* Cypress shared memory */
+
         . = ALIGN(TFM_LINKER_TFM_BSS_ALIGNMENT);
     } > RAM
     Image$$ER_PART_RT_POOL$$ZI$$Base = __partition_runtime_start__;
