platform:Align overlay area with copy region
The content of the copy area is not used anymore at runtime, allowing
the SP stacks to be placed directly on top of it. This change also
removes the extension area, as it is no longer needed — the overlay
area already allocates the required space.

Change-Id: Iccec38935bbee6da668d0d160d9ed120fe0c87aa
Signed-off-by: Gabor Toth <gabor.toth2@arm.com>

--- a/platform/ext/common/atfe/tfm_isolation_s.ld.template
+++ b/platform/ext/common/atfe/tfm_isolation_s.ld.template
@@ -190,11 +190,6 @@ SECTIONS
 {% endfor %}
     } > FLASH
 
-#ifdef CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS
-    /* There is no location counter for the load addresses, so create one */
-    current_load_location = tfm_data_load_end;
-#endif
-
 #ifdef S_RUNTIME_ITCM_START
     /* Position tag: Start of SPM code (privileged) */
     saved_location_counter = .;
@@ -208,14 +203,6 @@ SECTIONS
         *tfm_spm*:(SORT_BY_ALIGNMENT(.rodata*))
     } > ITCM
 
-#ifdef CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS
-    /*
-     * Calculate the saved space by reusing the copy area, which
-     * will contain the SP stacks. If they don't fit the area is extended.
-     */
-    current_load_location += SIZEOF(.ER_SPM_CODE);
-#endif
-
     /* Position tag: End of SPM code (privileged) */
     . = ALIGN(TFM_LINKER_SPM_CODE_ALIGNMENT);
     . = saved_location_counter + SIZEOF(.ER_SPM_CODE);
@@ -223,19 +210,21 @@ SECTIONS
 #endif
 
 #ifdef CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS
-    /* Place an empty area after the copied area to extend it to fit the SP stacks */
-    reusable_area = current_load_location - Image$$PT_OVERLAY_AREA_BEGIN$$Base;
-    saved_location_counter = .;
-    .ER_REUSABLE_AREA_EXTENSION : AT(current_load_location)
+    /*
+     * Align the overlay load region in FLASH.
+     * We can’t rely on section placement alone, since we need the LMA
+     * to be aligned.
+     * This expression ensures the next section’s load address starts at
+     * a properly aligned boundary in FLASH for the overlay area.
+     */
+    Image$$PT_OVERLAY_AREA_BEGIN$$Base = LOADADDR(.flash_marker1);
+
+    .tfm_runtime_sp_stacks Image$$PT_OVERLAY_AREA_BEGIN$$Base (NOLOAD) : ALIGN(TFM_LINKER_PT_AROT_PART_PRIVATE_DATA_ALIGNMENT)
     {
-        /* The area must not be negative! */
-        . += (reusable_area >= SIZEOF(.tfm_runtime_sp_stacks))
-                ? 0
-                : (SIZEOF(.tfm_runtime_sp_stacks) - reusable_area);
-    } > RAM
-    . = saved_location_counter + SIZEOF(.ER_REUSABLE_AREA_EXTENSION);
-    Image$$PT_OVERLAY_AREA_END$$Base = current_load_location + SIZEOF(.ER_REUSABLE_AREA_EXTENSION);
-#endif
+        KEEP(*(.tfm_runtime_sp_stacks*))
+    } > FLASH
+    Image$$PT_OVERLAY_AREA_END$$Base = .;
+#endif /* CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS */
 
     .ARM.extab :
     {
@@ -450,31 +439,8 @@ SECTIONS
 #endif
 
 #ifdef CONFIG_TFM_REUSE_COPY_AREA_FOR_SP_STACKS
-    /*
-     * Record the FLASH load address right before the SP data section, since
-     * this marks the start of the copy area.
-     */
-    .flash_marker1 : { } > RAM AT > FLASH
-
-    /*
-     * Align the overlay load region in FLASH.
-     * We can’t rely on section placement alone, since we need the LMA
-     * to be aligned.
-     * This expression ensures the next section’s load address starts at
-     * a properly aligned boundary in FLASH for the overlay area.
-     */
-    Image$$PT_OVERLAY_AREA_BEGIN$$Base =
-        (LOADADDR(.flash_marker1) + (TFM_LINKER_PT_OVERLAY_ALIGNMENT - 1))
-        & ~(TFM_LINKER_PT_OVERLAY_ALIGNMENT - 1);
-
-    saved_location_counter = .;
-    . = ORIGIN(FLASH);
-    .tfm_runtime_sp_stacks Image$$PT_OVERLAY_AREA_BEGIN$$Base (NOLOAD) : AT(0)
-    {
-        KEEP(*(.tfm_runtime_sp_stacks*))
-    } > FLASH
-
-    . = saved_location_counter;
+    /* Record the FLASH load address right before the first entry of the copy area */
+    .flash_marker1 : ALIGN(TFM_LINKER_PT_AROT_PART_PRIVATE_DATA_ALIGNMENT) { } > RAM AT > FLASH
 #endif
 
 {% for partition in partitions %}
