Build: IAR: Propagate BL11 and BL2 compile flags
Missing propagation of CP_FLAGS to BL11 and BL2 targets
caused IAR to fail building.

Change-Id: If472fcf72c9d1fb6ca6870b9ec8479ad1e80bad4
Signed-off-by: Dávid Házi <david.hazi@arm.com>

--- a/bl1/bl1_1/shared_lib/CMakeLists.txt
+++ b/bl1/bl1_1/shared_lib/CMakeLists.txt
@@ -107,3 +107,7 @@ target_sources(bl1_1_psa_crypto
     PRIVATE
 )
 
+target_compile_options(bl1_1_psa_crypto
+    PUBLIC
+        ${BL1_COMPILER_CP_FLAG}
+)
